<resources>
    <string name="app_name">Workout Notebook</string>
    <string name="text_main_activity_title">Workout Tracker</string>
    <string name="text_main_activity_subheading">Add and track personalized workouts</string>
    <string name="text_add_workout">Add Workout</string>
    <string name="text_copy_workout">Copy Workout</string>
    <string name="text_show_workout">Show Workouts</string>
    <string name="text_add_workout_title">Add a name for your workout.</string>
    <string name="text_edit_workout_title">Edit the name of your workout.</string>
    <string name="text_add_workout_description">To make it easy to track one good approach would be to add the date and the workout category (e.g. Jan 01 - Upper Body,  Jan 03 - Lower Body)</string>
    <string name="text_edit_workout_description">To avoid confusion and track your workout better, two workouts should not have the same name</string>
    <string name="text_add_workout_title_field">workout name</string>
    <string name="text_continue">Continue</string>
    <string name="text_next_page">Next Page</string>
    <string name="text_save_routines">Save</string>
    <string name="text_routine_name">Name</string>
    <string name="text_routine_sets">Sets</string>
    <string name="text_routine_reps">Reps</string>
    <string name="text_routine_weight">Weight</string>
    <string name="text_routine_rest">Rest</string>
    <string name="text_routine_name_field">routine name</string>
    <string name="text_routine_sets_field">sets</string>
    <string name="text_routine_reps_field">reps</string>
    <string name="text_routine_weight_field">weight</string>
    <string name="text_routine_rest_field">rest</string>
    <string name="text_routine_name_list">Name: </string>
    <string name="text_routine_sets_list">Sets: </string>
    <string name="text_routine_reps_list">Reps: </string>
    <string name="text_routine_weight_list">Weight: </string>
    <string name="text_routine_rest_list">Rest: </string>
    <string name="text_error_add_workout_empty_title">"Title cannot be empty" </string>
    <string name="text_toast_add_routine_onContinue">Please fill in all the information to add a routine to your workout</string>
    <string name="text_field_cannotEmpty">Field cannot be empty</string>
    <string name="text_delete_workout">Delete Workout</string>
    <string name="text_dialog_delete_routines">Are you sure you want to delete this workout?</string>
    <string name="text_dialog_edit_workout">This workout name already exists. Are you sure you want to proceed?</string>
    <string name="text_dialog_alert_cancel">Cancel</string>
    <string name="text_dialog_alert_confirm">Confirm</string>
    <string name="text_dialog_delete_routines_back_button">Are you sure you want to quit? Progress might be lost</string>
    <string name="text_register_button">Register</string>
    <string name="text_login_button">Login</string>
    <string name="text_sign_up_screen">Register a new account or log in with an existing one</string>
    <string name="text_login_no_account_yet">Don\'t have an account? Signup</string>
    <string name="text_login_register">Enter a username and password to register</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_workouts_no_data">No workouts to show yet</string>
    <string name="text_copy_workouts_no_data">No workouts to copy</string>
    <string name="text_password_length">Password should be at least 8 characters long</string>
    <string name="text_unknown_error">An unexpected error has occurred</string>
    <string name="text_error_registration_failed">Registration failed</string>
    <string name="text_profile_username">Username</string>
    <string name="text_choose_profile_pic">Add profile picture</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_alert_log_out">Are you sure you want to log out?</string>
    <string name="text_show_workout_error_empty_screen">Show Empty Screen</string>
    <string name="text_network_error">Could not display quote, check network connection</string>
    <string name="text_home_weather">The weather in %1$s is %2$s degrees.</string>
    <string name="text_home_quote">&quot;%1$s&quot; - %2$s</string>
    <string name="text_show_workout_toolbar">Workouts</string>
    <string name="text_edit_workout_toolbar">Edit Workout</string>
    <string name="text_snack_deletion_confirmed">CARD DELETED</string>
    <string name="text_snackbar_undo">UNDO</string>
    <string name="text_snackbar_retry">RETRY</string>
    <string name="text_add_workout_toolbar">Add Workout</string>
    <string name="text_workout_app">Workout App</string>
    <string name="text_show_routines_toolbar">Routines</string>
    <string name="text_add_routine_toolbar">Add Routine</string>
    <string name="text_sing_up">Singup</string>
    <string name="text_start_header">Welcome to the Workout Notebook</string>
    <string name="text_start_screen1">Hello new user!</string>
    <string name="text_start_screen2">The Workout Notebook app is meant to replace your old and bulky gym notebook</string>
    <string name="text_start_screen3">We aim to make it easy for you to track old workout sessions and add new ones</string>
    <string name="text_error_invalid_credentials">Invalid username or password</string>
    <string name="text_profile_header">Statistics</string>
    <string name="text_profile_workouts">Workouts: &quot;%1$s&quot;</string>
    <string name="text_profile_routines">Routines: &quot;%1$s&quot;</string>
    <string name="text_consent_header">Lorem Ipsum</string>
    <string name="text_consent_body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_consent_accept">Accept</string>
    <string name="text_consent_decline">Decline</string>
    <string name="text_consent_dialog_decline">Are you sure you want to decline? You can only use the app once the terms and conditions have been accepted</string>
</resources>
