<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.SignupActivity">

    <TextView
        style="@style/subheadingStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/text_sign_up_screen" />

    <Button
        android:id="@+id/button_register"
        style="@style/buttonColorAndBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/text_register_button" />

    <Button
        android:id="@+id/button_login"
        style="@style/buttonColorAndBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/text_login_button" />


</LinearLayout>