<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/workout_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_confirm_edit"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/registrationMargin">

            <TextView
                android:id="@+id/add_workout_title"
                style="@style/headingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/defaultMargin"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:gravity="center"
                android:text="@string/text_edit_workout_title" />

            <TextView
                android:id="@+id/add_workout_description"
                style="@style/textParagraphStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/defaultMargin"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:layout_marginBottom="@dimen/defaultMargin"
                android:gravity="center"
                android:text="@string/text_edit_workout_description" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_add_workout_title_field"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_confirm_edit"
        style="@style/buttonColorAndBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/text_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workout_scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>