<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/workout_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/loginLogoSize"
                android:layout_height="@dimen/loginLogoSize"
                android:layout_gravity="center"
                android:src="@drawable/img"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginEnd="@dimen/defaultMargin"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_field"
                    style="@style/inputFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_username"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginEnd="@dimen/defaultMargin"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/login_field_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_field"
                    style="@style/inputFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_confirm_login"
        style="@style/buttonColorAndBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:layout_marginBottom="4dp"
        android:text="@string/text_login_button"
        app:layout_constraintBottom_toTopOf="@+id/text_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_no_account"
        style="@style/textBodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginBottom="12dp"
        android:text="@string/text_login_no_account_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_sign_up"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_sing_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/mediumFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>